--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("/ogolneTlo.jpg");
+    background-image: url("./ogolneTlo.jpg");
     background-size: 100%;
     margin: 100px;
   }
